<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="200"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/txt_add_contact"
        android:orderInCategory="300"
        android:title="@string/add_contact"
        android:icon="@drawable/ic_person_add_white_24dp"
        app:showAsAction="ifRoom"
        />

</menu>