<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fg.chatapp.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="200"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/txt_chat"
        android:orderInCategory="300"
        android:title="@string/chat_txt"
        android:icon="@drawable/ic_message_reply_text_white_24dp"
        app:showAsAction="ifRoom"
        />
</menu>
